--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_management?enabledTLSProtocols=TLSv1.2
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Sakshi@2001$kul
